chore: rename unique_key to access_token

--- a/.github/workflows/set-persistent-value.yml
+++ b/.github/workflows/set-persistent-value.yml
@@ -9,7 +9,7 @@ jobs:
         id: set_persistent_value_step
         uses: aaimio/set-persistent-value@master
         with:
-          unique_key: ${{ secrets.UNIQUE_KEY }}
+          access_token: ${{ secrets.ACCESS_TOKEN }}
           key: set_persistent_value_test
           value: "This is a test value"
       - name: Return a persistent value
